<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">

    <EditText
        android:id="@+id/register_username_editText"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/register_password_editText"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/pass_word"
        android:inputType="textVisiblePassword" />

    <EditText
        android:id="@+id/confirm_password_editText"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/button_confirm_password"
        android:inputType="textVisiblePassword" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:onClick="register"
        android:text="@string/button_register" />

    <Button
        android:id="@+id/to_login_button"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:onClick="toLoginActivity"
        android:text="@string/button_login" />

</LinearLayout>
