<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rat_scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/activity_rat_sightings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <Button
            android:id="@+id/back_button"
            style="@android:style/Widget.DeviceDefault.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onBack"
            android:text="@string/back"
            android:visibility="visible" />

        <Button
            android:id="@+id/reload_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="reload"
            android:text="@string/reload" />

        <Button
            android:id="@+id/add_rat_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="addRat"
            android:text="@string/add_rat"
            android:textAppearance="@android:style/TextAppearance.Widget.Button"
            android:visibility="visible" />

    </LinearLayout>
</ScrollView>